# address-formatter-rs

./: Cargo.toml  Makefile
.github/workflows/: ci.yml  rust.yml
src/: formatter.rs  handlebar_helper.rs  place.rs  read_configuration.rs
tests/: opencage_tests.rs  short_addr_test.rs  simple_test.rs
