[package]
name = "address-formatter"
version = "0.2.2"
authors = ["antoine-de <antoine.desbordes@gmail.com>"]
edition = "2021"
license = "AGPL-3.0"
description = "Universal international address formatter"
repository = "https://github.com/CanalTP/address-formatter-rs"
keywords = ["address", "i18n", "geocoder", "mimirsbrunn", "navitia"]
readme = "README.md"

[dependencies]
anyhow = "1"
serde =  { version = "1", features = ["derive"] }
serde_yaml = "0.8"
yaml-rust = "0.4"
log = "0.4"
handlebars = "4"
regex = "1"
lazy_static = "1"
itertools = "0.10"
linked-hash-map = "0.5"
strum = "0.24"
strum_macros = "0.24"
enum-map = { version = "2.4", features = ["serde"] }

[dev-dependencies]
env_logger = "0.9"
include_dir = "0.7"
maplit = "1"
